name:                haskell-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/haskell-api#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base64-bytestring
                     , classy-prelude
                     , clientsession
                     , emailaddress
                     , envelope
                     , from-sum
                     , filepath
                     , Glob
                     , HTTP
                     , http-api-data
                     , http-client
                     , http-conduit
                     , http-types
                     , hvect
                     , lens
                     , monad-control
                     , monad-logger
                     , MonadRandom
                     , monad-time
                     , mtl
                     , path-pieces
                     , pwstore-fast
                     , read-env-var
                     , resource-pool
                     , scotty
                     , Spock
                     , Spock-core
                     , time
                     , transformers
                     , transformers-base
                     , unordered-containers
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable haskell-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-api
  default-language:    Haskell2010

test-suite haskell-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cdepillabout/haskell-api
